# imu-data-ingestion

./: .gitignore  CMakeLists.txt  README.md  fileReader.cpp  main.cpp  read_csv.cpp  videoReader.cpp  videoWriter.cpp
include/imu-data-ingestion/: csv_reader.hpp
input_data/: ELTEkor_20220322.csv
src/: csv_reader.cpp  main.cpp  read_csv.cpp
